--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,17 +1,30 @@
 h1 {
-  clear: both;
   text-align: center;
   background: red;
 }
 
-ul li:first-child {
-  float: left;
+.header-wrapper, .footer-wrapper { 
+  width: 100%;
+  @include box-sizing(border-box);
+  height: 50px;
+  @include linear-gradient(black, grey);
 }
-ul li { 
-  float: right;
-  padding: 10px;
-  list-style-type: none;
-  a { 
-    text-decoration: none;
+
+ul { 
+  padding-top: 15px;
+  text-align: center;
+  li { 
+    text-align: center;
+    display: inline;
+    padding: 10px;
+    list-style-type: none;
+    a { 
+      text-decoration: none;
+    }
   }
 }
+
+
+
+
+
