--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,4 +1,3 @@
 = provide(:title, 'Home')
 %h1 Grafix is not for everyone
-.text-column
-  %p Some Lorem Ipsum here kjfdkfdkfdjfkdjfdfjdfjdkkjkdfjdkfjdkfjdkfjdkfjdkfjdkfjdkfjdkfjdkfjdkfjdkfjdkfjdkjjjjjjjjjjjjjjjjjjjjjjjjkdjfdkfjdkfjdkfjdkfjdfjdkfjdkjfdkfjdkfjdkfjdkfjdkfjdkfjdkfjdkfjdkfjdkjkdjkfjkjkfdf jfdkjfdkfjdkfjdkfjdkfjdkfjdkfjdkfj
+%p.text-column Some lorem ipsum text goes here dfjdkfjdkfdkfjdkfjdkfjdkfjdfkdjfkdjfkdfjdkfjdkfjdkfjdkfjdkjkjfkdjfdkfjdkfjdkfjdkfjdkfjdkfjdkfjdkfjdkfjdkjjjjjjjjjjjjjjdfjdkjfdkfjdkfjdkfjdkfjdkjfdkfjkdfjdkfjf
