Basic flexible grid for /home

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,8 @@
 @import "static_pages";
 
 body {
+  font-family: $helvetica;
+  color: white;
   width: 100%;
   margin: auto;
   background: green;
