white background black text

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,10 +4,10 @@
 
 body {
   font-family: $helvetica;
-  color: white;
+  color: black;
   width: 100%;
   margin: auto;
-  background: green;
+  background: white;;
 }
 
 .container {
