--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -7,10 +7,11 @@ h1 {
   @include box-sizing(border-box);
 }
 p {
-  text: white;
+  text: black;
 }
 
 .header-wrapper, .footer-wrapper { 
+  color: white;
   width: 100%;
   @include box-sizing(border-box);
   height: 50px;
