--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,11 +1,8 @@
-h1 {
+.big-title {
   text-align: center;
-}
-.bit-title {
   font-size: 55px;
-  width: 100%;
-  @include box-sizing(border-box);
 }
+
 .text-column{
  @include columns(2); 
   text: black;
@@ -14,8 +11,7 @@ h1 {
 
 .header-wrapper, .footer-wrapper { 
   color: white;
-  width: 100%;
-  @include box-sizing(border-box);
+  font-size: 14px;
   height: 50px;
   @include linear-gradient(black, grey);
 }
@@ -25,10 +21,9 @@ h1 {
 }
 
 ul { 
-  padding-top: 15px;
+  padding-top: 19px;
   text-align: center;
   li { 
-    text-align: center;
     display: inline;
     padding: 10px;
     list-style-type: none;
