--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,3 +1,3 @@
 = provide(:title, 'Home')
-%h1.bit-title Webdesign is just plain Awesome!
-%p.text-column Some lorem ipsum Contrary to popular is to dang long for a little mouse snake hersef is not best when sleepy her head columns belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words
+%h1.big-title Webdesign is just plain Awesome!
+%p.text-column Some lorem ipsum Contrary to popular is to dang long for a little mouse snake hersef is not best when sleepy her head columns belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical atin literature from 47 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words
