--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,5 +11,6 @@
   %body
     .container
       =render 'layouts/header'
+      =render 'layouts/nav_tabs'
       = yield
       =render 'layouts/footer'
