--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,11 +1,9 @@
 %header.header-wrapper
   %nav
+    %a.logo{ :href => '#' } in.print.out
+    %a.k-h_logo{ :href => '#' } K-H
     %ul
       %li
-        %a{ :href => '#' } HOME
+        %a.social-media{ :href => '#' } FB
       %li
-        %a{ :href => '#' } K-H
-      %li
-        %a{ :href => '#' } FB
-      %li
-        %a{ :href => '#' } TUMBLR
+        %a.social-media{ :href => '#' } TUMBLR
