--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
 @import "bourbon";
 @import "neat";
 @import "static_pages";
-@import "reset.css";
+@import "reset";
 
 body {
   @include box-sizing(border-box);
