--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,9 +1,18 @@
 @import "bourbon";
 
+/* FUNCTIONS */
+
+@function fluid_text($target_size, $context_size){
+  @return (($target_size * 1.00) / $context_size);
+}
+
+$header_height: 50px;
+$white-border: 2px solid white;
+
+
+
 .header-wrapper, .footer-wrapper { 
-  background: black;
   color: white;
-  font-size: 0.625em; //10px / 16px
   height: 50px;
   position: relative;
   ul { 
@@ -14,6 +23,7 @@
       padding: 10px;
       list-style-type: none;
       a { 
+        font-size: 0.625em; // 10px / 16px 
         color: white;
         text-decoration: none;
       }
@@ -23,28 +33,34 @@
 
 .footer-wrapper {
   clear: both;
+  background-color: black;
 }
 
 .logo {
   @include box-sizing(border-box);
+  background-color: black;
   font-size: 30px;
+  width: 25%;
+  height: $header_height;
   color: white;
+  border-right: 2px solid white;
   text-decoration: none;
   float: left;
-  padding-left: 12px;
-  padding-top: 8px;
+  padding-top: 7px;
+  padding-left: 30px;
 }
 
 .k-h_logo {
   @extend .logo;
+  width: 50%;
   font-size: 20px;
-  padding-left: 25px;
-  padding-top: 15px;
+  float: left;
 }
 
 .social-media {
-  float: right;
-  padding-right: 20px;
+  @extend .logo;
+  width: 25%;
+  border-right: none;
 }
 
 
@@ -52,7 +68,6 @@
   @include box-sizing(border-box);
   .exhibition, .project, .symposium, .program {
     width: 25%;
-    border-right: 2px solid white;
     float: left;
     margin-top: 10px;
     height: 40px;
@@ -62,14 +77,17 @@
 
 .exhibition {
   background-color: #195935;
+  border-right: $white-border;
 }
 
 .project {
   background-color: #588c49;
+  border-right: $white-border;
 }
 
 .symposium { 
   background-color: #71a64b;
+  border-right: $white-border;
 }
 
 .program {
@@ -78,7 +96,7 @@
 
 .big-title {
   text-align: center;
-  font-size: 2.8125em; 
+  font-size: 3em; // 48px / 16px
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 0.10em;
@@ -88,14 +106,15 @@
 
 .small-title {
  @extend .big-title;
- font-size: 2.5em;
+ font-size: 2.5em; // 40px / 16px
  padding-top: 14px;
  padding-bottom: 18px;
 }
 
 .text-column{
  @include columns(2); 
-  text: black;
+ @include column-gap(15px);
+  color: black;
   font-size: 1.125em; // 18px / 16px
   padding-top: 30px;
   padding-bottom: 20px;
@@ -111,13 +130,17 @@
 .box01, .box02, .box03, .box04 {
   @include box-sizing(border-box);
   padding-right: 3px;
-  border-right: 3px solid white;
+  border-right: $white-border;
   width: 25%;
   height: 200px;;
   background: black;
   float: left;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+.box04 {
+  border-right: none;
 }
 
 
