adds Kuenstlerhaus Logo to the Header

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,5 +1,7 @@
 %header.header-wrapper
   %nav
     %a.logo{ :href => '#' } in.print.out
-    %a.k-h_logo{ :href => '#' } K-H
+    .k-h-wrapper
+      = image_tag("K-Haus-Logo3.jpg", :alt => "Künstlerhaus", :class => "k-h_logo")
+      %p.k-h-logo-text k/haus
     %a.social-media{ :href => '#' } FB
