--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -49,12 +49,23 @@ $white-border: 2px solid white;
   padding-top: 7px;
   padding-left: 30px;
 }
+.k-h-wrapper {
+  background-color: white;
+  float: left;
+  width: 50%;
+}
 
 .k-h_logo {
-  @extend .logo;
-  width: 50%;
-  font-size: 20px;
   float: left;
+}
+
+.k-h-logo-text { 
+  color: black;
+  float: left;
+  padding-left: 10px;
+  padding-top: 35px;
+  font-weight: bold;
+  font-size: 14px;
 }
 
 .social-media {
@@ -66,6 +77,7 @@ $white-border: 2px solid white;
 
 .nav_tabs { 
   @include box-sizing(border-box);
+  clear: both;
   .exhibition, .project, .symposium, .program {
     width: 25%;
     float: left;
