--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -11,29 +11,33 @@ $white-border: 2px solid white;
 
 
 
-.header-wrapper, .footer-wrapper { 
+.header-wrapper { 
   color: white;
-  height: 50px;
-  position: relative;
-  ul { 
-    padding-top: 19px;
-    text-align: center;
-    li { 
-      display: inline;
-      padding: 10px;
-      list-style-type: none;
-      a { 
-        font-size: 0.625em; // 10px / 16px 
-        color: white;
-        text-decoration: none;
-      }
-    }
-  }
 }
 
 .footer-wrapper {
-  clear: both;
   background-color: black;
+  height: $header_height;
+  clear: both;
+  ul { 
+    padding-top: 17px;
+    text-align: center;
+    li { 
+      padding-right: 10px;
+      padding-left: 14px;
+      border-right: 1px solid white;
+      display: inline;
+      a {
+        margin-top: 20px;
+        text-align: center;
+        text-decoration: none;
+        color: white;
+        }
+      &:last-child {
+        border-right: none;
+      }
+    }
+  }
 }
 
 .logo {
@@ -47,7 +51,7 @@ $white-border: 2px solid white;
   text-decoration: none;
   float: left;
   padding-top: 7px;
-  padding-left: 30px;
+  padding-left: 1%;
 }
 .k-h-wrapper {
   background-color: white;
@@ -62,8 +66,8 @@ $white-border: 2px solid white;
 .k-h-logo-text { 
   color: black;
   float: left;
+  padding-top: 34px;
   padding-left: 10px;
-  padding-top: 35px;
   font-weight: bold;
   font-size: 14px;
 }
@@ -81,7 +85,7 @@ $white-border: 2px solid white;
   .exhibition, .project, .symposium, .program {
     width: 25%;
     float: left;
-    margin-top: 10px;
+    margin-top: 10px; 
     height: 40px;
     margin-bottom: 35px;
   }
@@ -106,41 +110,57 @@ $white-border: 2px solid white;
   background-color: #80bf41;
 }
 
-.big-title {
+.context-title {
   text-align: center;
-  font-size: 3em; // 48px / 16px
+  font-size: 3.125em; // 50px / 16px
+  font-style: italic;
+  font-weight: bold;
+}
+
+.big-title {
+  clear: both;
+  text-align: center;
+  font-size: 2.18em; // 35px / 16px
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 0.10em;
-  font-style: italic;
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
 .small-title {
  @extend .big-title;
- font-size: 2.5em; // 40px / 16px
- padding-top: 14px;
- padding-bottom: 18px;
+ font-size: 1.375em; // 22px / 16px
+ margin-top: 0px;
+ padding-top: 15px;
+ padding-bottom: 12px;
 }
 
-.text-column{
- @include columns(2); 
- @include column-gap(15px);
+.intro-text {
   color: black;
-  font-size: 1.125em; // 18px / 16px
+  font-size: 1.375em; // 22px / 16px
   padding-top: 30px;
-  padding-bottom: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-bottom: 8px;
+  padding-left: 1.0416667%; //10px / 960px
+  padding-right: 1.0416667%; //10px / 960px
+}
+
+.text-column {
+  @extend .intro-text;
+  @include columns(2);
+  @include column-gap(15px);
+  font-size: 1.125em; // 18px / 16px
+  padding-top: 15px;
 }
 
 .image-boxes {
   background: white;
   width: auto;
   height: 250px;
+  margin-top: 30px;
 }
 .box01, .box02, .box03, .box04 {
   @include box-sizing(border-box);
+  clear: both;
   padding-right: 3px;
   border-right: $white-border;
   width: 25%;
@@ -149,6 +169,7 @@ $white-border: 2px solid white;
   float: left;
   margin-top: 20px;
   margin-bottom: 20px;
+  border: 30px solid black;
 }
 
 .box04 {
