--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,9 +1,13 @@
 = provide(:title, 'Home')
+%h1.context-title GELD MACHT SICHT BAR
+%p.intro-text Das Wiener Künstlerhaus veranstaltet 2013 mit in.print.out im Rahmen der Partnerschaft mit International Print Network (IPNet) erneut eine Großausstellung aktueller, internationaler, künstlerischer Grafik. Ergänzt wird die Ausstellung durch eine Werkschau historischer und aktueller Plakatkunst, das Plakatprojekt für den öffentlichen Raum GELD MACHT SICHT BAR sowie weiteren Begleitprogrammen.
+%p.text-column Die Ausstellung in.print.out stellt aktuelle Tendenzen der internationalen Grafikkunst in einen neuen Kontext mit temporären Arbeiten, Installationen und raumbezogenen grafischen Experimenten. Schwerpunktmäßig im Bereich der bildenden Kunst angesiedelt, behandelt in.print.out das Phänomen Grafik in seiner Komplexität als künstlerisches Ausdrucksmedium, als Schnittstelle zwischen der traditionellen Disziplin der Druckgrafik und neuester, innovativer Techniken, zwischen analogen und digitalen Medien, zwischen bedrucktem Papier und interaktiven Installationen sowie in seiner gesellschaftlichen Funktion als Plakat. 
+
 %h1.big-title Ausstellungsraum <br /> & <br /> Plakatwand
 %h1.small-title Internationale Grafik im Künstlerhaus
-%p.text-column Some lorem ipsum Contrary to popular is to dang long for a little mouse snake hersef is not best when sleepy her head columns belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical atin literature from 47 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words
-.image-boxes
-  .box01
-  .box02
-  .box03
-  .box04
+/
+  .image-boxes
+  = image_tag("pic01.jpg", :alt => "pic01", :class => ".box01")
+  = image_tag("pic02.jpg", :alt => "pic01", :class => ".box02")
+  = image_tag("pic0.jpg", :alt => "pic01", :class => ".box03")
+  = image_tag("pic04.jpg", :alt => "pic01", :class => ".box04")
