--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -155,8 +155,8 @@ $white-border: 2px solid white;
 .image-boxes {
   background: white;
   width: auto;
-  height: 250px;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 .box01, .box02, .box03, .box04 {
   @include box-sizing(border-box);
