adds basic photo grid and styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,8 @@ body {
   font-family: $helvetica;
   color: black;
   background-color: white;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
 }
 
 .container {
