--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -7,7 +7,20 @@
 %h1.small-title Internationale Grafik im Künstlerhaus
   
 .image-boxes
+  .box01.center
+    = image_tag("pic01.jpg", :alt => "pic01", :class => ".box01")
+  .box02.center
+    = image_tag("pic02.jpg", :alt => "pic02", :class => ".box02")
+
+  .box03.center
+    = image_tag("pic03.jpg", :alt => "pic03", :class => ".box03")
+
+  .box04.center
+    = image_tag("pic04.jpg", :alt => "pic04", :class => ".box04")
+
+/
+  .image-boxes
   = image_tag("pic01.jpg", :alt => "pic01", :class => ".box01")
-  = image_tag("pic02.jpg", :alt => "pic01", :class => ".box02")
-  = image_tag("pic03.jpg", :alt => "pic01", :class => ".box03")
-  = image_tag("pic04.jpg", :alt => "pic01", :class => ".box04")
+  = image_tag("pic02.jpg", :alt => "pic02", :class => ".box02")
+  = image_tag("pic03.jpg", :alt => "pic03", :class => ".box03")
+  = image_tag("pic04.jpg", :alt => "pic04", :class => ".box04")
