--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -25,7 +25,7 @@ $white-border: 2px solid white;
     li { 
       padding-right: 10px;
       padding-left: 14px;
-      border-right: 1px solid white;
+      border-right: 1px dotted rgba(255, 255, 255, 0.7);
       display: inline;
       a {
         margin-top: 20px;
@@ -132,7 +132,7 @@ $white-border: 2px solid white;
  font-size: 1.375em; // 22px / 16px
  margin-top: 0px;
  padding-top: 15px;
- padding-bottom: 12px;
+ padding-bottom: 30px;
 }
 
 .intro-text {
@@ -153,27 +153,27 @@ $white-border: 2px solid white;
 }
 
 .image-boxes {
-  background: white;
-  width: auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-.box01, .box02, .box03, .box04 {
-  @include box-sizing(border-box);
-  clear: both;
-  padding-right: 3px;
-  border-right: $white-border;
-  width: 25%;
-  height: 200px;;
-  background: black;
-  float: left;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border: 30px solid black;
-}
+  overflow: hidden;
+  padding: 0 2% 0 2%;
+  height: 300px;
+  width: 95%;;
+  margin: auto;
+  .box01, .box02, .box03, .box04 {
+    @include box-sizing(border-box);
+    float: left;
+    background-color: white;
+    width: 25%;
+    height: 230px;
+    img {
+      @include box-shadow(5px 5px 10px rgba(0,0,0,0.1));
+      max-width: 100%;
+      max-height: 100%;
 
-.box04 {
-  border-right: none;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 }
 
 
