--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -156,13 +156,13 @@ $white-border: 2px solid white;
 }
 
 .image-boxes {
-  @include box-shadow(0 0 10px rgba(0,0,0,0.1));
+  border: 1px dotted rgba(0, 0, 0, 0.3);
+  @include box-shadow(0 0 40px rgba(0,0,0,0.1));
   padding: 2%;
   height: 300px;
   width: 95%;;
   margin: auto;
   margin-bottom: 50px;
-  border: 2px solid rgba(0, 0, 0, 0.05);
   .box01, .box02, .box03, .box04 {
     @include box-sizing(border-box);
     float: left;
