adds a media-query for 716px: navtabs adapt

--- a/app/views/layouts/_nav_tabs.html.haml
+++ b/app/views/layouts/_nav_tabs.html.haml
@@ -1,5 +1,9 @@
 .nav_tabs
   .exhibition
+    %p Austellung
   .project
+    %p Plakatkunstprojekt
   .symposium
+    %p Symposium
   .program
+    %p Begleitprogramm
