white context-title, cool hover on navigation

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,5 +17,5 @@ body {
   @include box-sizing(border-box);
   margin: auto;
   width: 90%;
-  background: white;
+  background: url(/assets/lightpaperfibers.jpg) repeat;
 }
