--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -227,6 +227,10 @@ $green-hover: #80BF41;
   }
 }
 
+@media screen and (max-width 940px) {
+
+}
+
 @media screen and (max-width: 820px) {
   .nav_tabs {
     .exhibition, .project, .symposium, .program {
@@ -273,8 +277,6 @@ $green-hover: #80BF41;
   .social-media {
     width: 50%;
     float: right;
-    margin-left: -20%;
-    padding-left:-10%;
   }
   .k-h-logo-text {
     display: none;
