--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -220,7 +220,6 @@ $green-hover: #80BF41;
     background-color: none;
     width: 25%;
     height: 230px;
-    border: solid 4px white;
     img {
       @include box-shadow(2px 2px 10px rgba(0,0,0,0.08));
       max-width: 100%;
@@ -233,8 +232,19 @@ $green-hover: #80BF41;
   }
 }
 
-@media screen and (max-width 940px) {
-
+@media screen and (max-width: 940px) {
+  .image-boxes {
+    height: 1000px;
+    height: 916px;
+      .box01, .box02, .box03, .box04 {
+        width: 50%;
+        height: 460px;
+        border: none;
+    }
+  }
+  .text-column {
+     clear: both;
+  }
 }
 
 @media screen and (max-width: 820px) {
@@ -273,7 +283,7 @@ $green-hover: #80BF41;
   .footer-wrapper {
     font-size: 0.8em;
   }
-}  
+}
 
 @media screen and (max-width: 750px) {
   .logo {
@@ -290,6 +300,15 @@ $green-hover: #80BF41;
     display: none;
   }
 }
+
+@media screen and (max-width: 650px) {
+  .image-boxes {
+    height: 1780px;
+    .box01, .box02, .box03, .box04 {
+      width: 100%;
+      }
+    }
+  } 
 
 @media screen and (max-width: 550px) {
   body .container {
