--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -225,9 +225,8 @@ $green-hover: #80BF41;
   .box01, .box02, .box03, .box04 {
     @include box-sizing(border-box);
     float: left;
-    background-color: none;
     width: 25%;
-    height: 230px;
+    height: auto;
     img {
       @include box-shadow(2px 2px 10px rgba(0,0,0,0.08));
       max-width: 100%;
@@ -311,12 +310,12 @@ $green-hover: #80BF41;
 
 @media screen and (max-width: 710px) {
   .image-boxes {
-    height: 1780px;
+    height: 1835px;
     .box01, .box02, .box03, .box04 {
       width: 100%;
       img { 
-        max-width: auto;
-        max-height: auto;
+        width: 318px;
+        height: auto;
       }
     }
   }
@@ -336,5 +335,13 @@ $green-hover: #80BF41;
   .small-title {
     padding-right: 2px;
     padding-left: 2px;
+  }
+  .image-boxes {
+    .box01, .box02, .box03, .box04 {
+      img {
+        width: 318px;
+        height: auto;
+      }
+    }
   }
 }
