--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -169,7 +169,7 @@ $green-hover: #80BF41;
   font-size: 3.125em; // 50px / 16px
   font-style: italic;
   font-weight: bold;
-  @include transition (color 5s ease-in-out, text-shadow 5s ease-in-out);
+  @include transition (color 2s ease-in-out, text-shadow 2s ease-in-out);
   &:hover {
     color: #014023;
     text-shadow: 0px 0.9px 5px rgba(0,0,0,0.25);
@@ -267,6 +267,13 @@ $green-hover: #80BF41;
       font-size: 0.93em;
     }
   }
+  .k-h-wrapper {
+    width: 25%
+  }
+  .social-media {
+    width: 50%;
+    float: left;
+  }
   .context-title {
     clear: both;
     display: block;
@@ -318,6 +325,9 @@ $green-hover: #80BF41;
         height: auto;
       }
     }
+  }
+  .k-h-logo-text {
+    display: none;
   }
 } 
 
