--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -225,7 +225,7 @@ $green-hover: #80BF41;
     width: 25%;
     height: 100%;;
     img {
-      @include box-shadow(2px 2px 10px rgba(0,0,0,0.08));
+      @include box-shadow(2px 2px 10px #F3F3F3);
       max-width: 100%;
       max-height: 100%;
       border: solid 10px white;
