adds frame for context-title

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,5 +1,5 @@
 = provide(:title, 'Home')
-%h1.context-title GELD MACHT SICHT BAR
+%h1.context-title.image-box GELD MACHT SICHT BAR
 %p.intro-text Das Wiener Künstlerhaus veranstaltet 2013 mit in.print.out im Rahmen der Partnerschaft mit International Print Network (IPNet) erneut eine Großausstellung aktueller, internationaler, künstlerischer Grafik. Ergänzt wird die Ausstellung durch eine Werkschau historischer und aktueller Plakatkunst, das Plakatprojekt für den öffentlichen Raum GELD MACHT SICHT BAR sowie weiteren Begleitprogrammen.
 
 %h2.big-title Ausstellungsraum <br /> & <br /> Plakatwand
