--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -105,7 +105,7 @@ $green-hover: #80BF41;
     float: left;
     margin-top: 10px; 
     height: 40px;
-    margin-bottom: 35px;
+    margin-bottom: 0px;
     cursor: pointer;
     p {
       padding-top: 10px;
@@ -218,12 +218,12 @@ $green-hover: #80BF41;
   margin: auto;
   margin-bottom: 20px;
   background-color: white;
-  border: solid 14px #F3F3F3;
+  border: solid 14px #fbfbfb;
   .box01, .box02, .box03, .box04 {
     @include box-sizing(border-box);
     float: left;
     width: 25%;
-    height: 100%;;
+    height: 100%;
     img {
       @include box-shadow(2px 2px 10px #F3F3F3);
       max-width: 100%;
@@ -234,6 +234,11 @@ $green-hover: #80BF41;
       margin-right: auto;
     }
   }
+}
+
+.image-box {
+  @extend .image-boxes;
+    height: auto;
 }
 
 .text-column {
@@ -257,6 +262,9 @@ $green-hover: #80BF41;
       }
     .text-column {
         clear: both;
+    }
+    .image-box {
+      height: auto;
     }
 }
 
@@ -331,6 +339,9 @@ $green-hover: #80BF41;
         height: auto;
       }
     }
+  }
+  .image-box {
+      height: auto;
   }
   .k-h-logo-text {
     display: none;
