--- a/app/assets/stylesheets/_exhibition.css.scss
+++ b/app/assets/stylesheets/_exhibition.css.scss
@@ -3,11 +3,18 @@ $margin-top: 20px;
 .container{
   @include outer-container;
 }
-.exhibition + .small-title {
+p strong {
+  font-weight: bold;
+}
+
+.first-title {
   @include span-columns(12);
   text-align: left;
-  font-size: em(26);
-  margin-bottom: 20px;
+  font-size: em(30);
+  text-transform: none;
+  font-weight: bold;
+  margin-bottom: 0px;
+  line-height: 1.5em;
 }
   .date, .location, .artist {
     font-size: em(20);
@@ -15,38 +22,39 @@ $margin-top: 20px;
     display: block;
     line-height: 1.5em;
  }
-.intro-text-exhibition-00 {
+.main-intro-text {
   @include span-columns(12);
   margin-top: $margin-top;
-  font-size: em(22);
+  font-size: em(20);
+  font-family: $lucida-grande;
+  line-height: 1.2em;
 }
 
-.intro-text-exhibition-01, .intro-text-exhibition-02 {
-  @extend .intro-text-exhibition-00;
+.text-01, .text-02 {
+  @extend .main-intro-text;
   font-size: em(18);
   @include columns(2);
+  @include column-gap(10px);
   margin-top: $margin-top;
 }
 
-.exhibition-image-box {
-  .exhibition-pic {
-    @include span-columns(6);
-    margin-top: $margin-top * 1.3;
-    margin-bottom: $margin-top * 1.3;
-    img {
-      float: left;
-      display: block;
-      margin: auto;
-      width: 100%;
-      height: auto;
-      border: solid 14px #fbfbfb;
-      @include box-shadow(2px 2px 10px rgba(0,0,0,0.2));
-    }
-  }
-  .artist {
-    margin-top: 32%;
-    @include span-columns(6);
-
+.exhibition-pic {
+  @include span-columns(6);
+  margin-top: $margin-top * 1.3;
+  margin-bottom: $margin-top * 1.3;
+  img {
+    float: left;
+    display: block;
+    width: 100%;
+    height: auto;
+    border: solid 14px #fbfbfb;
+    @include box-shadow(2px 2px 10px rgba(0,0,0,0.2));
   }
 }
+.artist {
+  @include span-columns(5);
+  margin-top: 30%;
+  font-size: em(16);
+  float: right;
+ }
 
